<resources>
    <string name="app_name">Kitchen</string>
    <string name="app_lang">App Language</string>
    <string name="arabic">ع</string>
    <string name="english">en</string>

    <string name="order_number">Order No : </string>
    <string name="order_type">Order type</string>
    <string name="table_number">Table No : </string>
    <string name="section_number">Section No : </string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Qty</string>
    <string name="note">Note</string>
    <string name="no_update">No Update</string>
    <string name="dine_in">Dine In</string>
    <string name="take_away">Take Away</string>
    <string name="title_activity_handy_testing">HandyTestingActivity</string>

    <string name="enter_password">Enter Password</string>

    <string name="company_no">Company No</string>
    <string name="company_year">Company Year</string>
    <string name="pos_no">POS No</string>
    <string name="Screen_no">Screen No</string>
    <string name="timer_duration">Timer (second)</string>
    <string name="stage_type">Stage Type</string>
    <string name="transfer">Transfer</string>
    <string name="ip_address">IP Address(Receiver)</string>
    <string name="stage_no">Stage No</string>
    <string name="url">URL</string>

    <string name="print">Print</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="clean_kitchen">Clean Kitchen</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

</resources>
