<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/orders_row_layout_container"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_weight="1"
    android:background="@drawable/focused_table"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/orders_row_container_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.7"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/order_number"
                        android:textColor="@color/text_color"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/orderRow_order_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:gravity="center"
                        android:text="1004"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/table_number"
                        android:textColor="@color/text_color"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/orderRow_table_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:gravity="center"
                        android:text="14"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:text="@string/section_number"
                        android:textColor="@color/text_color"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/orderRow_section_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:gravity="center"
                        android:text="2"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/orderRow_orderType_image"
                android:layout_width="55dp"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/orderRow_orderType_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dine_in"
                android:textColor="@color/text_color"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="5dp"
        android:background="@color/text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="2"
            android:background="@color/layer4"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:text="@string/item_name"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/layer4"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/layer4"
            android:gravity="center"
            android:text="@string/note"
            android:textColor="@color/text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="2dp"
        android:scrollbars="vertical">

        <TableLayout
            android:id="@+id/orderRow_table_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp" />

    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:background="@color/text_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orderRow_isUpdated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_weight="9"
            android:text="sdfsadfadf"
            android:fontFamily="serif"
            android:padding="3dp"
            android:textColor="@color/text_color"
            android:textSize="12dp" />

        <ImageButton
            android:id="@+id/orderRow_delete_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_delete_black_24dp" />

    </LinearLayout>
</LinearLayout>

